Fix placements of article buttons when they wrap.

--- a/css/_article.scss
+++ b/css/_article.scss
@@ -18,6 +18,7 @@ article {
 
     header {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         border-bottom: 2px solid $gray-lighter;
         margin-bottom: $spacer-y;
